fix: squished exec partner logo
fix: squished exec partner logo

fix: add new line to eof

--- a/src/index.scss
+++ b/src/index.scss
@@ -39,3 +39,8 @@
   --pgn-color-info-100:  #{$info-100};
   --pgn-color-info-500:  #{$info-500};
 }
+
+.pgn__card-logo-cap {
+  object-fit: scale-down !important; 
+  object-position: center center !important;
+}
